fixed footer alignment and font family fall back

--- a/op-cross-culture-basics/lesson-04/main.scss
+++ b/op-cross-culture-basics/lesson-04/main.scss
@@ -1,5 +1,5 @@
 $text-font: 'Trebuchet MS';
-$title-font: 'Helvetica';
+$title-font: 'Helvetica', 'Arial', sans-serif;
 $primary: #cc3366;
 $primary-second: #339999;
 $primary-light: #f0d4d4;
@@ -19,7 +19,7 @@ body {
   position: relative;
   background-image: url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/other-programs-bg-header-magenta.svg'),
     url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/other-programs-footer-logo.svg');
-  background-position: top, bottom;
+  background-position: top, -11.5px 100%;
   background-size: contain;
   background-repeat: no-repeat;
   font-family: $text-font;
@@ -282,6 +282,7 @@ body {
 }
 @media screen and (max-width: 600px) {
   .html-lesson-wrapper {
+    background-position: top, -11px 100% !important;
     .type {
       padding: 2px 8px 2px 7px !important;
     }
@@ -303,6 +304,7 @@ body {
 }
 @media screen and (max-width: 460px) {
   .html-lesson-wrapper {
+    background-position: top, -1.5px 100% !important;
     .text-header {
       left: -12px !important;
     }
@@ -315,7 +317,6 @@ body {
   .html-lesson-wrapper {
     .text-header {
       left: -9px !important;
-
       .arrow-part {
         &:before {
           left: -4.5% !important;
